--- a/themes/educenter-hugo/assets/scss/templates/_navigation.scss
+++ b/themes/educenter-hugo/assets/scss/templates/_navigation.scss
@@ -39,8 +39,12 @@
   }
 }
 
+.nav-bg-base  {
+  background-color: rgba($secondary-color, 0.3);
+}
+
 .nav-bg {
-  background-color: $secondary-color;
+  background-color: $secondary-color !important;
 }
 
 .nav-item {
