--- a/themes/educenter-hugo/layouts/index.html
+++ b/themes/educenter-hugo/layouts/index.html
@@ -5,7 +5,7 @@
 <!-- hero slider -->
 {{ if $data.homepage.slider.enable }}
 {{ with $data.homepage.slider }}
-<section class="hero-section overlay bg-cover mt-5" data-background="{{ .bg_image | absURL }}">
+<section class="hero-section overlay bg-cover" data-background="{{ .bg_image | absURL }}">
   <div class="container">
     <div class="hero-slider mt-5">
       <!-- slider item -->
