--- a/themes/educenter-hugo/assets/scss/_common.scss
+++ b/themes/educenter-hugo/assets/scss/_common.scss
@@ -16,7 +16,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f8f8f8;
+  background-color: #062735;
   z-index: 999999;
   display: flex;
   align-items: center;
