--- a/themes/educenter-hugo/layouts/partials/header.html
+++ b/themes/educenter-hugo/layouts/partials/header.html
@@ -30,7 +30,7 @@
   </div>
   {{ end }}
   <!-- navbar -->
-  <div class="navigation w-100 {{ if site.Params.top_header }} top-hider nav-bg {{ end }}">
+  <div class="navigation w-100 {{ if site.Params.top_header }} nav-bg-base top-hider {{ end }}">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0">
         <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}"><img class="img-fluid"
