--- a/themes/educenter-hugo/layouts/partials/head.html
+++ b/themes/educenter-hugo/layouts/partials/head.html
@@ -4,13 +4,11 @@
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description"
-    content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
-  {{ with site.Params.author }}
-  <meta name="author" content="{{ . }}">{{ end }}
+  
+  {{- partial "meta.html" . -}}
   
   <!-- theme meta -->
-  <meta name="theme-name" content="educenter-hugo" />
+  <meta name="theme-name" content="ovarosboutique" />
   
   {{ hugo.Generator }}
   {{ "<!-- multilingual SEO optimizations -->" | safeHTML }}
