--- a/themes/educenter-hugo/layouts/partials/meta.html
+++ b/themes/educenter-hugo/layouts/partials/meta.html
@@ -1,14 +1,25 @@
 <meta name="description" content="{{ with site.Params.meta.description }}{{ . }}{{ end }}">
 {{ with site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 
-<link rel="canonical" href="{{ site.BaseURL }}">
+<link rel="canonical" href="{{ .Page.Permalink }}">
 <meta property="og:locale" content="{{ with site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ .Title }}">
 <meta property="og:description" content="{{ with site.Params.meta.description }}{{ . }}{{ end }}">
-<meta property="og:url" content="{{ site.BaseURL }}">
+<meta property="og:url" content="{{ .Page.Permalink }}">
 <meta property="og:site_name" content="{{ .Title }}">
-<meta property="og:image" content="{{ site.Params.meta.preview | absURL }}">
+
+{{ $siteURL := .Site.BaseURL  }}
+{{- with site.Params.meta.preview }}
+{{ $image := . }}
+  {{- if not (strings.HasPrefix $image "http") }}
+  {{ $image := urls.JoinPath $siteURL $image }}
+  <meta property="og:image" content="{{ $image }}" />
+  {{- else }}
+  <meta property="og:image" content="{{ $image }}" />
+  {{- end }}
+{{- end }}
+
 <meta property="og:image:width" content="1150">
 <meta property="og:image:height" content="660">
 <meta property="og:image:type" content="image/png">
