--- a/themes/educenter-hugo/layouts/partials/footer.html
+++ b/themes/educenter-hugo/layouts/partials/footer.html
@@ -34,6 +34,7 @@
             <li class="mb-4">{{ site.Params.address | markdownify }}</li>
             <li class="mb-4">{{ site.Params.email | markdownify }}</li>
             <li class="mb-4">{{ site.Params.mobile | markdownify }}</li>
+            <li class="mb-4"><a class="text-color" href="{{ site.Params.terms_and_conds | absURL }}">{{ site.Params.terms_and_conds_title }}</a></li>
           </ul>
         </div>
         <!-- links -->
