--- a/themes/educenter-hugo/layouts/partials/head.html
+++ b/themes/educenter-hugo/layouts/partials/head.html
@@ -27,6 +27,9 @@
   {{ $styles := resources.Get "scss/main.scss" | toCSS | fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 
+  {{ "<!--Flags-->" | safeHTML }}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"/>
+
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ `images/favicon.ico` | absURL }}" type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.ico` | absURL }}" type="image/x-icon">
