--- a/themes/educenter-hugo/layouts/partials/header.html
+++ b/themes/educenter-hugo/layouts/partials/header.html
@@ -15,10 +15,10 @@
         </div>
         <div class="col-lg-8 text-center text-lg-right">
           <ul class="list-inline">
-            <!-- <li class="list-inline-item">
+            <li class="list-inline-item">
               <a class="text-color mr-3" href="tel:{{ site.Params.mobile }}"><strong>{{ i18n "call" | upper }} :
                 </strong> {{ site.Params.mobile }}</a>
-            </li> -->
+            </li>
             <li class="list-inline-item">
               <a class="text-color" href="mailto:{{ site.Params.email }}"><strong>{{ i18n "email" | upper }} : </strong>
                 {{ site.Params.email }}</a>
