--- a/themes/educenter-hugo/assets/scss/_common.scss
+++ b/themes/educenter-hugo/assets/scss/_common.scss
@@ -357,6 +357,8 @@ textarea.form-control {
       padding-left: 20px;
       margin-bottom: 10px;
       list-style-type: none;
+      font-size: 16px;
+      line-height: 1.9;
 
       &::before {
         position: absolute;
