--- a/themes/educenter-hugo/layouts/partials/footer.html
+++ b/themes/educenter-hugo/layouts/partials/footer.html
@@ -117,6 +117,8 @@
 {{ "<!-- Main Script -->" | safeHTML }}
 {{ $script := resources.Get "js/script.js" | minify}}
 <script src="{{ $script.Permalink }}"></script>
+{{ $script := resources.Get "js/email.js" | minify}}
+<script src="{{ $script.Permalink }}"></script>
 
 {{ "<!-- google analitycs -->" | safeHTML }}
 {{ with site.Params.google_analitycs_id}}
